--- a/app/src/main/res/layout/activity_discounts.xml
+++ b/app/src/main/res/layout/activity_discounts.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:gravity="center"
-    tools:context=".Discounts">
+    tools:context=".DiscountsActivity">
 
     <GridView
         android:id="@+id/griddiscounts"
