EL SIGNUP GUARDA EL CORREU AL SHAREDPREFERENCES, QUAN TANQUEM L'APLICACIÓ EN TEORIA ESTA BORRAT PERO QUAN TORNES A ENTRAR AMB BOTO DE GOOGLE ES REFRESCA I EL TORNA A CONEIXER EL CORREU QUE HI HAVIA ANTERIOR A TANCAR LA SESSIO I INICIA DIRECTAMENT. PERO SI ET MOUS CAP A SIGN IN I DESPRES TORNES LLAVORS JA NO.

--- a/app/src/main/res/layout/activity_fragment_mydiscounts.xml
+++ b/app/src/main/res/layout/activity_fragment_mydiscounts.xml
@@ -6,7 +6,7 @@
     android:layout_height="match_parent">
 
     <TextView
-        android:id="@+id/mydiscountstitle"
+        android:id="@+id/mydiscountsfragmenttitle"
         android:layout_width="295dp"
         android:layout_height="72dp"
         android:gravity="center"
@@ -26,6 +26,7 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.495"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/mydiscountstitle"
+        app:layout_constraintTop_toBottomOf="@+id/mydiscountsfragmenttitle"
         app:layout_constraintVertical_bias="0.239" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
