--- a/app/src/main/res/layout/activity_fragment_profile.xml
+++ b/app/src/main/res/layout/activity_fragment_profile.xml
@@ -11,13 +11,27 @@
     android:paddingEnd="15dp"
     tools:context=".MenuPrincipal.FragmentProfile">
 
+    <!--
+       <ImageView
+           android:id="@+id/profileImageView"
+           android:layout_width="200dp"
+           android:layout_height="200dp"
+           android:layout_marginTop="10dp"
+           android:layout_marginBottom="10dp"
+           android:scaleType="fitXY"
+           android:background="@drawable/roundshape"
+           app:shapeAppearanceOverlay="@style"/>
+          android:background="@drawable/roundshape" -->
 
-    <ImageView
-        android:layout_width="200dp"
-        android:layout_height="200dp"
-        android:layout_marginTop="10dp"
-        android:layout_marginBottom="10dp"
-        android:scaleType="fitXY" />
+    <com.google.android.material.imageview.ShapeableImageView
+        android:id="@+id/profileImageView"
+        android:layout_width="180dp"
+        android:layout_height="180dp"
+        android:layout_marginTop="40dp"
+        android:layout_marginBottom="20dp"
+        android:scaleType="fitXY"
+        app:shapeAppearanceOverlay="@style/circleImageView" />
+
 
     <TextView
         android:layout_width="match_parent"
