--- a/app/src/main/res/layout/nav_header_menu_main.xml
+++ b/app/src/main/res/layout/nav_header_menu_main.xml
@@ -9,16 +9,19 @@
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingBottom="@dimen/activity_vertical_margin"
+    android:paddingBottom="5dp"
     android:theme="@style/ThemeOverlay.AppCompat.Dark">
 
-    <ImageView
+    <com.google.android.material.imageview.ShapeableImageView
         android:id="@+id/nav_user_pic"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="70dp"
+        android:layout_height="70dp"
         android:contentDescription="@string/nav_header_desc"
-        android:paddingTop="@dimen/nav_header_vertical_spacing"
-        app:srcCompat="@mipmap/ic_profile_round" />
+        android:scaleType="fitXY"
+        app:shapeAppearanceOverlay="@style/circleImageView"
+        android:layout_marginTop="5dp"
+        android:layout_marginBottom="5dp"/>
+        <!--app:srcCompat="@mipmap/ic_profile_round"-->
 
     <TextView
         android:id="@+id/nav_user_name"
