--- a/app/src/main/res/menu/activity_menu_main_drawer.xml
+++ b/app/src/main/res/menu/activity_menu_main_drawer.xml
@@ -18,6 +18,14 @@
             android:id="@+id/nav_profile"
             android:icon="@drawable/ic_person"
             android:title="My Profile" />
+        <item
+            android:id="@+id/nav_mydiscounts"
+            android:icon="@drawable/ic_mydiscounts"
+            android:title="My Discounts" />
+        <item
+            android:id="@+id/nav_myroutes"
+            android:icon="@drawable/ic_myroutes"
+            android:title="My Routes" />
 
 
     </group>
