--- a/app/src/main/res/layout/activity_fragment_profile.xml
+++ b/app/src/main/res/layout/activity_fragment_profile.xml
@@ -41,11 +41,29 @@
         android:textColor="#000000"
         android:textStyle="bold" />
 
-    <EditText
-        android:id="@+id/profile_username"
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="10dp" />
+        android:orientation="horizontal">
+
+        <EditText
+            android:id="@+id/profile_username"
+            android:layout_width="0dp"
+            android:layout_weight="4"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="10dp" />
+
+        <com.google.android.material.floatingactionbutton.FloatingActionButton
+            android:id="@+id/editnamebutton"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:clickable="true"
+            android:src="@drawable/ic_edit" />
+
+    </LinearLayout>
+
+
 
     <TextView
         android:layout_width="match_parent"
