--- a/app/src/main/res/layout/discount_cardview.xml
+++ b/app/src/main/res/layout/discount_cardview.xml
@@ -1,25 +1,28 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="280dp"
-    android:padding="5dp">
+    android:layout_height="180dp"
+    android:background="#B8DAEA"
+    app:cardCornerRadius="12dp">
 
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="280dp"
+        android:layout_height="match_parent"
         android:orientation="vertical">
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="100dp"
-            android:orientation="horizontal">
+            android:orientation="horizontal"
+            android:padding="5dp">
 
             <ImageView
                 android:id="@+id/mydiscountimage"
                 android:layout_width="160dp"
-                android:layout_height="100dp" />
+                android:layout_height="match_parent"
+                android:scaleType="fitXY" />
 
             <ImageView
                 android:id="@+id/hola"
@@ -27,26 +30,27 @@
                 android:layout_height="match_parent" />
         </LinearLayout>
 
-        <TextView
-            android:id="@+id/mydiscounttitle"
+        <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="TextView"
-            android:textSize="18sp" />
+            android:layout_height="80dp"
+            android:orientation="vertical"
+            android:padding="5dp">
 
-        <ScrollView
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content">
+            <TextView
+                android:id="@+id/mydiscounttitle"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="TextView"
+                android:textSize="18sp" />
 
             <TextView
                 android:id="@+id/mydiscountdescription"
                 android:layout_width="match_parent"
-                android:layout_height="match_parent"
+                android:layout_height="wrap_content"
                 android:text="TextView" />
-        </ScrollView>
-
+        </LinearLayout>
 
     </LinearLayout>
 
 
-</androidx.appcompat.widget.LinearLayoutCompat>
+</androidx.cardview.widget.CardView>
