--- a/app/src/main/res/layout/dialog_discount_clicked.xml
+++ b/app/src/main/res/layout/dialog_discount_clicked.xml
@@ -1,45 +1,69 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:gravity="center_horizontal"
+    android:background="@drawable/bottom_sheet_background"
     android:orientation="vertical"
     android:paddingLeft="5dp"
     android:paddingTop="25dp"
     android:paddingRight="5dp">
 
-    <ImageView
-        android:id="@+id/discountClickedImage"
-        android:layout_width="200dp"
-        android:layout_height="190dp">
-
-    </ImageView>
-
     <TextView
-        android:id="@+id/titleDiscountActivateDialog"
         android:layout_width="match_parent"
-        android:layout_height="36dp"
-        android:layout_marginTop="10dp"
-        android:text="TextView"
-        android:textAlignment="center" />
+        android:layout_height="wrap_content"
+        android:gravity="center_horizontal"
+        android:layout_marginBottom="15dp"
+        android:textSize="20sp"
+        android:textColor="@color/black"
+        android:text="@string/discount_activation"/>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="10dp"
+        android:background="@drawable/cornersrounded"
+        android:backgroundTint="#F3B0DF59"
+        android:gravity="center"
+        android:orientation="horizontal">
+
+        <ImageView
+            android:id="@+id/discountClickedImage"
+            android:layout_width="174dp"
+            android:layout_height="145dp"
+            android:layout_margin="10dp">
+
+        </ImageView>
+
+        <TextView
+            android:id="@+id/titleDiscountActivateDialog"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:textAlignment="center"
+            android:textSize="16sp" />
+    </LinearLayout>
 
     <Button
         android:id="@+id/button_activar_discount"
         android:layout_width="238dp"
         android:layout_height="wrap_content"
-        android:layout_marginTop="40dp"
-        android:text="ACTIVAR" />
+        android:layout_marginTop="20dp"
+        android:backgroundTint="#02882E"
+        android:text="ACTIVAR"
+        android:textColor="#FFFFFF"
+        app:iconTint="#F16C6C" />
 
-    <Space
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content" />
 
     <Button
         android:id="@+id/button_no_activar_discount"
         android:layout_width="238dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="10dp"
-        android:text="AHORA NO" />
+        android:layout_marginBottom="30dp"
+        android:backgroundTint="#DA4E4E"
+        android:text="AHORA NO"
+        android:textColor="#FFFFFF" />
 
 
 </LinearLayout>
