--- a/app/src/main/res/layout/activity_fragment_mydiscounts.xml
+++ b/app/src/main/res/layout/activity_fragment_mydiscounts.xml
@@ -2,8 +2,8 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#6DD7ECEB"
-    android:gravity="center"
+    android:background="#DFD404"
+    android:gravity="center_horizontal"
     android:orientation="vertical"
     android:padding="10dp">
 
@@ -14,12 +14,14 @@
         android:gravity="center"
         android:text="DISCOUNTS USED" />
 
-    <GridView
-        android:id="@+id/mydiscountsgrid"
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/recyclerDiscounts"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:horizontalSpacing="0dp"
-        android:numColumns="1"
-        android:verticalSpacing="8dp" />
+        android:layout_height="wrap_content"
+        android:paddingTop="15dp"
+        android:paddingBottom="10dp">
+
+    </androidx.recyclerview.widget.RecyclerView>
+
 
 </LinearLayout>
