--- a/app/src/main/res/layout/discount_cardview.xml
+++ b/app/src/main/res/layout/discount_cardview.xml
@@ -4,6 +4,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="180dp"
+    android:layout_marginBottom="10dp"
     android:background="#B8DAEA"
     app:cardCornerRadius="12dp">
 
@@ -25,8 +26,10 @@
                 android:layout_height="match_parent"
                 android:scaleType="fitXY" />
 
-            <ImageView
-                android:id="@+id/hola"
+            <TextView
+                android:id="@+id/mydiscountPercentage"
+                android:gravity="center"
+                android:textSize="40sp"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent" />
         </LinearLayout>
