--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -10,7 +10,7 @@
     android:paddingTop="25dp"
     android:gravity="center"
     android:orientation="vertical"
-    tools:context=".Inicio.MainActivity">
+    tools:context=".Register.MainActivity">
 
         <androidx.cardview.widget.CardView
             android:layout_width="match_parent"
