--- a/app/src/main/res/layout/activity_discounts.xml
+++ b/app/src/main/res/layout/activity_discounts.xml
@@ -1,20 +1,27 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:gravity="center"
-    tools:context=".DiscountsActivity">
+    android:background="#DFD404"
+    android:gravity="center_horizontal"
+    android:orientation="vertical"
+    android:padding="10dp">
 
-    <GridView
-        android:id="@+id/griddiscounts"
+    <TextView
+        android:id="@+id/discountsactivitytitle"
+        android:layout_width="309dp"
+        android:layout_height="105dp"
+        android:gravity="center"
+        android:text="DISCOUNTS" />
+
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/recyclerDiscountsActivity"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_margin="30dp"
-        android:background="@color/purple_700"
-        android:numColumns="auto_fit"
-        android:horizontalSpacing="4dp"
-        android:verticalSpacing="4dp"
-        android:layout_gravity="center"/>
+        android:layout_height="wrap_content"
+        android:paddingTop="15dp"
+        android:paddingBottom="10dp">
+
+    </androidx.recyclerview.widget.RecyclerView>
+
+
 </LinearLayout>
