--- a/app/src/main/res/layout/activity_faqs.xml
+++ b/app/src/main/res/layout/activity_faqs.xml
@@ -8,7 +8,7 @@
     android:layout_margin="30dp"
     android:orientation="vertical"
     android:padding="20dp"
-    tools:context=".ContactUs">
+    tools:context=".MenuPrincipal.Faqs.ContactUs">
 
     <TextView
         android:id="@+id/SendMailTextView"
