--- a/app/src/main/res/layout/activity_fragment_home.xml
+++ b/app/src/main/res/layout/activity_fragment_home.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".MenuPrincipal.FragmentHome">
+    tools:context=".MenuPrincipal.Home.FragmentHome">
 
 
     <androidx.cardview.widget.CardView
