--- a/app/src/main/res/layout/fragment_sign_in.xml
+++ b/app/src/main/res/layout/fragment_sign_in.xml
@@ -3,7 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".Inicio.FragmentsViewPager.SignInFragment">
+    tools:context=".Register.FragmentsViewPager.SignInFragment">
 
     <!-- TODO: Update blank fragment layout -->
     <LinearLayout
