--- a/app/src/main/res/layout/fragment_sign_up.xml
+++ b/app/src/main/res/layout/fragment_sign_up.xml
@@ -7,8 +7,8 @@
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center"
+        android:layout_height="614dp"
+        android:layout_gravity="center_horizontal"
         android:gravity="center"
         android:orientation="vertical">
 
@@ -52,10 +52,46 @@
             android:hint="@string/confirmpassword"
             android:inputType="textPassword" />
 
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_margin="20dp"
+            android:gravity="center_vertical"
+            android:orientation="horizontal">
+
+            <CheckBox
+                android:id="@+id/checkboxsignup"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:scaleX="1.4"
+                android:scaleY="1.4" />
+
+            <TextView
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="4"
+                android:text="Create collaborator account"
+                android:textAlignment="textStart"
+                android:textColor="#26B505"
+                android:textSize="16sp" />
+
+            <ImageView
+                android:id="@+id/info_collaborator"
+                android:layout_width="0dp"
+                android:layout_height="37dp"
+                android:layout_weight="2"
+                android:src="@drawable/ic_info" />
+
+
+        </LinearLayout>
+
+
         <Button
             android:id="@+id/buttonsignup"
-            android:layout_width="wrap_content"
+            android:layout_width="203dp"
             android:layout_height="wrap_content"
+            android:layout_marginTop="80dp"
             android:text="@string/signup" />
     </LinearLayout>
 
