moltes coses cambiades

--- a/app/src/main/res/layout/activity_fragment_home.xml
+++ b/app/src/main/res/layout/activity_fragment_home.xml
@@ -4,91 +4,37 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@drawable/wallpapaer"
     tools:context=".MenuPrincipal.Home.FragmentHome">
 
-
-    <androidx.cardview.widget.CardView
-        android:id="@+id/cardViewRuta"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentStart="true"
-        android:layout_alignParentTop="true"
-        android:layout_alignParentEnd="true"
-        android:layout_alignParentBottom="true"
-        app:cardCornerRadius="10dp"
+    <LinearLayout
+        android:layout_width="305dp"
+        android:layout_height="98dp"
+        android:orientation="vertical"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.498"
+        app:layout_constraintHorizontal_bias="0.323"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.173">
+        app:layout_constraintVertical_bias="0.083">
 
-        <LinearLayout
-            android:layout_width="wrap_content"
+
+        <TextView
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="vertical">
+            android:fontFamily="@font/sniglet"
+            android:text="@string/hi"
+            android:textColor="@color/black"
+            android:textSize="38sp"
+            android:textStyle="bold" />
 
-            <ImageView
-                android:id="@+id/imageViewRuta"
-                android:layout_width="150dp"
-                android:layout_height="150dp"
-                android:src="@drawable/routedos" />
-
-            <TextView
-                android:id="@+id/titleRuta"
-                android:layout_width="150dp"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="10dp"
-                android:gravity="center"
-                android:text="@string/myroute"
-                android:textColor="#000000"
-                android:textSize="16sp"
-                android:textStyle="bold" />
-        </LinearLayout>
-
-
-    </androidx.cardview.widget.CardView>
-
-    <androidx.cardview.widget.CardView
-        android:id="@+id/cardViewDisc"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentStart="true"
-        android:layout_alignParentTop="true"
-        android:layout_alignParentEnd="true"
-        android:layout_alignParentBottom="true"
-        app:cardCornerRadius="10dp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.498"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/cardViewRuta"
-        app:layout_constraintVertical_bias="0.334">
-
-        <LinearLayout
-            android:layout_width="wrap_content"
+        <TextView
+            android:id="@+id/hiUser"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="vertical">
-
-            <ImageView
-                android:id="@+id/imageViewDiscount"
-                android:layout_width="150dp"
-                android:layout_height="150dp"
-                android:src="@drawable/discountdos" />
-
-            <TextView
-                android:id="@+id/titleDiscount"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="10dp"
-                android:gravity="center"
-                android:text="@string/discounts"
-                android:textColor="#000000"
-                android:textSize="16sp"
-                android:textStyle="bold" />
-        </LinearLayout>
-
-
-    </androidx.cardview.widget.CardView>
-
+            android:fontFamily="@font/sniglet"
+            android:textColor="@color/black"
+            android:textSize="38sp"
+            android:textStyle="bold" />
+    </LinearLayout>
 </androidx.constraintlayout.widget.ConstraintLayout>
