--- a/app/src/main/res/layout/activity_fragment_mydiscounts.xml
+++ b/app/src/main/res/layout/activity_fragment_mydiscounts.xml
@@ -2,17 +2,10 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#DFD404"
+    android:background="#00FFFFFF"
     android:gravity="center_horizontal"
     android:orientation="vertical"
     android:padding="10dp">
-
-    <TextView
-        android:id="@+id/mydiscountsfragmenttitle"
-        android:layout_width="309dp"
-        android:layout_height="105dp"
-        android:gravity="center"
-        android:text="DISCOUNTS USED" />
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/recyclerDiscounts"
