--- a/app/src/main/res/layout/profile_menu.xml
+++ b/app/src/main/res/layout/profile_menu.xml
@@ -2,14 +2,13 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#00FFFFFF"
+    android:id="@+id/viewprofilemenu"
     android:orientation="horizontal">
 
     <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/routechoiceRecyclerView"
+        android:id="@+id/profileMenuListview"
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="match_parent"/>
 
-    </androidx.recyclerview.widget.RecyclerView>
 
 </LinearLayout>
