--- a/app/src/main/res/layout/routes_all.xml
+++ b/app/src/main/res/layout/routes_all.xml
@@ -2,9 +2,10 @@
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@drawable/wallpapaer"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/wrapper"
-    tools:context=".MenuPrincipal.Routes.RoutesActivity">
+    tools:context=".MenuPrincipal.Routes.FragmentRoutes">
 
 
 </FrameLayout>
