--- a/app/src/main/res/layout/discount_comment.xml
+++ b/app/src/main/res/layout/discount_comment.xml
@@ -3,9 +3,8 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:layout_marginTop="10dp"
-    android:background="#00FFFFFF"
-    android:backgroundTint="#FFFFFF"
+    android:paddingTop="10dp"
+    android:background="@drawable/wallpapaer"
     android:orientation="vertical">
 
     <LinearLayout
@@ -45,9 +44,10 @@
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/commentRecyclerView"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="match_parent"
             android:layout_marginTop="30dp"
-            android:paddingLeft="10dp" />
+            android:paddingLeft="10dp"
+            android:paddingRight="10dp"/>
 
     </LinearLayout>
 
