--- a/app/src/main/res/layout/activity_fragment_profile.xml
+++ b/app/src/main/res/layout/activity_fragment_profile.xml
@@ -7,6 +7,7 @@
     android:layout_marginTop="10dp"
     android:paddingLeft="15dp"
     android:paddingRight="15dp"
+    android:id="@+id/fragmentprofile"
 
     android:background="@drawable/wallpapaer"
     android:gravity="center_horizontal"
