--- a/app/src/main/res/values-ca/values.xml
+++ b/app/src/main/res/values-ca/values.xml
@@ -3,36 +3,35 @@
     <string name="error">Error</string>
     <string name="no">No</string>
     <string name="yes">Yes</string>
-    <string name="hi">Hola</string>
+    <string name="hi">Hallo</string>
     <string name="ok">OK</string>
-    <string name="signup">Registrarse</string>
-    <string name="Register">Registrarse</string>
-    <string name="signin">Iniciar sesión</string>
-    <string name="collaborator">Collaborator</string>
+    <string name="signup">Sign up</string>
+    <string name="Register">Register</string>
+    <string name="signin">Sign in</string>
     <string name="email">Email</string>
-    <string name="password">Contraseña</string>
-    <string name="confirmpassword">Confirmar contraseña</string>
+    <string name="password">Password</string>
+    <string name="confirmpassword">Confirm Password</string>
     <string name="username">Username</string>
-    <string name="haveAccount">Ya tienes una cuenta?</string>
-    <!-- TODO: Remove or change this placeholder text -->
-    <string name="myroute">MI RUTA</string>
-    <string name="discounts">DESCUENTOS</string>
-    <string name="faqs">FAQS</string>
-    <string name="ajustes">AJUSTES</string>
-    <string name="contactus"><u>Necesita ayuda? Contacta con nosotros!</u></string>
-    <string name="sendmailtitle">Cómo podemos ayudar?</string>
-    <string name="hint_email">Tu dirección de email aquí</string>
-    <string name="buttonsend">Enviar mail</string>
-    <string name="emailto">Para</string>
-    <string name="hint_subject">Sujeto</string>
-    <string name="hint_message">Mensage</string>
+    <string name="collaborator">Collaborator</string>
+    <string name="haveAccount">Do you already have an account?</string>
+    <string name="myroute">Routes</string>
+    <string name="discounts">Descomptes</string>
+    <string name="faqs">Faqs</string>
+    <string name="ajustes">Settings</string>
+    <string name="contactus"><u>Need some help? Contact us!</u></string>
+    <string name="sendmailtitle">How can we help you?</string>
+    <string name="hint_email">Your email address here</string>
+    <string name="buttonsend">Send mail</string>
+    <string name="emailto">To</string>
+    <string name="hint_subject">Subject</string>
+    <string name="hint_message">Message</string>
     <string name="supportemail">annaApp.support@gmail.com</string>
     <string name="santperedeponts"><b>Sant Pere de Ponts</b></string>
     <string name="santamaria"><b>Santa Maria de Ponts</b></string>
     <string name="condis"><b>Supermercat Condis</b></string>
     <string name="homilies"><b>Homilies Organya</b></string>
     <string name="naturlandia"><b>Naturlandia Andorra</b></string>
-    <string name="links_info">Link Informativo: </string>
+    <string name="links_info">Link Informatiu: </string>
     <string name="linkSantPeredePonts"><u>https://www.ponts.cat/coneix-ponts/llocs-dinteres-1/sant-perte-de-ponts</u></string>
     <string name="linkCondis"><u>https://en-gb.facebook.com/login/?next=https%3A%2F%2Fen-gb.facebook.com%2Fcondis.es%2Fposts%2F2970701349921804</u> </string>
     <string name="linkSantaMaria"><u>https://www.ponts.cat/coneix-ponts/llocs-dinteres-1/santa-maria-de-ponts</u></string>
@@ -48,8 +47,8 @@
     <string name="action_settings">Settings</string>
 
     <string name="menu_home">Home</string>
-    <string name="menu_gallery">Galería</string>
-    <string name="menu_slideshow">Desplegable</string>
+    <string name="menu_gallery">Gallery</string>
+    <string name="menu_slideshow">Slideshow</string>
     <string name="title_activity_menu_main">MenuMain</string>
 
 
@@ -62,12 +61,11 @@
     <string name="userNotRegisteredFromSignIn"> This user is not registered. You should first sign up. </string>
     <string name="discount_activation">Discount Activation</string>
 
-    <string name="catalan">Catalan</string>
-    <string name="english">English</string>
-    <string name="spanish">Spanish</string>
-    <string name="italian">Italian</string>
-    <string name="french">French</string>
-    <string name="german">German</string>
-
+    <string name="catalan">Català</string>
+    <string name="english">Anglès</string>
+    <string name="spanish">Espanyol</string>
+    <string name="italian">Italià</string>
+    <string name="french">Francès</string>
+    <string name="german">Alemany</string>
 
 </resources>
