--- a/app/src/main/res/layout/activity_fragment_home.xml
+++ b/app/src/main/res/layout/activity_fragment_home.xml
@@ -8,57 +8,65 @@
     tools:context=".MenuPrincipal.Home.FragmentHome">
 
     <LinearLayout
-        android:id="@+id/linearLayout2"
-        android:layout_width="316dp"
-        android:layout_height="140dp"
+        android:id="@+id/linearLayout3"
+        android:layout_width="348dp"
+        android:layout_height="92dp"
         android:backgroundTint="#EAE2E2"
-        android:orientation="vertical"
         android:padding="5dp"
         android:translationZ="90dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.494"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.12">
+        app:layout_constraintVertical_bias="0.075">
 
 
         <TextView
-            android:layout_width="match_parent"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_marginRight="20dp"
             android:fontFamily="@font/sniglet"
             android:text="@string/hi"
-            android:textAlignment="textEnd"
-            android:textColor="@color/black"
-            android:textSize="48sp"
-            android:textStyle="bold" />
-
-        <TextView
-            android:id="@+id/hiUser"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:fontFamily="@font/sniglet"
-            android:textAlignment="textEnd"
             android:textColor="@color/black"
             android:textSize="38sp"
             android:textStyle="bold" />
 
         <TextView
+            android:id="@+id/hiUser"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Be the first one to enjoy the experiences advertised."
-            android:textSize="16sp"
+            android:fontFamily="@font/sniglet"
+            android:textColor="@color/black"
+            android:textSize="26sp"
             android:textStyle="bold" />
+
     </LinearLayout>
+
+
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:paddingStart="30dp"
+        android:paddingEnd="30dp"
+        android:text="Be the first one to benefit from our offers and experiences."
+        android:textAlignment="center"
+        android:textSize="16sp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.239" />
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/homeRecyclerView"
-        android:layout_width="393dp"
-        android:layout_height="347dp"
+        android:layout_width="344dp"
+        android:layout_height="429dp"
         android:background="#00FFFFFF"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/linearLayout2" />
+        app:layout_constraintTop_toBottomOf="@+id/linearLayout3"
+        app:layout_constraintVertical_bias="0.656" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
