--- a/app/src/main/res/layout/activity_fragment_profile.xml
+++ b/app/src/main/res/layout/activity_fragment_profile.xml
@@ -143,7 +143,7 @@
         <androidx.viewpager2.widget.ViewPager2
             android:id="@+id/viewpagerprofile"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
+            android:layout_height="400dp"
             android:background="#00FFFFFF" />
 
     </LinearLayout>
