--- a/app/src/main/res/layout/add_template.xml
+++ b/app/src/main/res/layout/add_template.xml
@@ -1,41 +1,56 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:orientation="vertical">
 
-    <TextView
-        android:id="@+id/adTemplateTitle"
+<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:layout_width="150dp"
+    android:layout_height="260dp"
+    android:backgroundTint="#80A0FD"
+    android:layout_marginBottom="20dp"
+    app:cardCornerRadius="15dp">
+
+
+    <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:layout_margin="5dp"
-        android:layout_weight="2"
-        android:textSize="24sp"
-        android:textStyle="bold" />
+        android:layout_height="match_parent"
+        android:orientation="vertical">
 
-    <ImageView
-        android:id="@+id/adTemplatePicture"
-        android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:layout_weight="6" />
+        <TextView
+            android:id="@+id/adTemplateTitle"
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            android:layout_marginBottom="5dp"
+            android:layout_weight="2"
+            android:background="#FFFFFF"
+            android:textSize="20sp"
+            android:textStyle="bold" />
 
-    <TextView
-        android:id="@+id/adTemplateDescription"
-        android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:layout_margin="5dp"
-        android:layout_weight="4"
-        android:textSize="16sp" />
+        <ImageView
+            android:id="@+id/adTemplatePicture"
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            android:layout_weight="6" />
 
-    <TextView
-        android:id="@+id/adTemplateDeadline"
-        android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:layout_margin="5dp"
-        android:layout_weight="1"
-        android:inputType="date"
-        android:textSize="14sp" />
+        <TextView
+            android:id="@+id/adTemplateDescription"
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            android:layout_margin="5dp"
+            android:layout_weight="4"
+            android:textSize="16sp" />
+
+        <TextView
+            android:id="@+id/adTemplateDeadline"
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            android:layout_marginTop="5dp"
+            android:layout_weight="1"
+            android:background="#FFFFFF"
+            android:inputType="date"
+            android:textSize="12sp" />
 
 
-</LinearLayout>
+    </LinearLayout>
+
+
+</androidx.cardview.widget.CardView>
 
